--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@azure/msal-angular": "^3.0.25",
+    "@azure/msal-browser": "^3.26.1",
     "preline": "^2.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
